Fix white lines and JS

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <div class="wave" aria-label="Fuerteactua">
             <blockquote class="motto element-to-modify" data-en-text="Always supreme quality"
                 data-de-text="German text">Siempre alta calidad</blockquote>
-            <button class="has-dropdown lang-icon">
-                <ul role="navigation" class="dropdown" aria-label="Language Options">
+            <button class="lang-icon">
+                <!-- <ul role="navigation" class="dropdown" aria-label="Language Options">
                     <li class="dropdown-item hidden lang" id="lang-es"><a href="#">ES</a></li>
                     <li class="dropdown-item lang" id="lang-en"><a href="#">EN</a></li>
                     <li class="dropdown-item lang" id="lang-de"><a href="#">DE</a></li>
-                </ul>
+                </ul> -->
             </button>
         </div>
 
