--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
             </button>
         </div>
 
-        <video src="./media/video_01.mp4" autoplay muted loop preload="auto">Your browser does not support the video
-            tag.</video>
+        <div class="video">
+            <video src="./media/video_01.mp4" autoplay muted loop preload="auto">Your browser does not support the videotag.</video>
+            <div class="black-line"></div>
+        </div>
+      
     </header>
 
     <main>
@@ -59,7 +62,10 @@
                     <div class="icon catalogue-icon"></div>
                     <span class="element-to-modify download" data-en-text="View catalogue" data-de-text="German text">Ver Catálogo</span>
                 </a>
-                <img class="hidden" src="./media/tmp_image.png" alt="">
+                <figure class="img hidden">
+                    <img src="./media/tmp_image.png" alt="">
+                </figure>
+               
             </article>
 
         </section>
