--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Your website description here">
     <title>Fuerteactua</title>
     <link rel="stylesheet" href="style.css" type="text/css">
-    <script src="script.js" defer></script>
+    <script src="script.js" async></script>
 </head>
 
 <body>
@@ -377,7 +378,7 @@
                 <p class="element-to-modify" data-en-text="We also organize concerts and corporate and family events. We are working to improve cultural life in the Canary Islands and support Majorero crafts." data-de-text="Wir organisieren auch Konzerte sowie Firmen- und Familienveranstaltungen. Wir arbeiten daran, das kulturelle Leben auf den Kanarischen Inseln zu verbessern und das Kunsthandwerk der Majoreros zu unterstützen.">También
                     organizamos conciertos y eventos corporativos y familiares. Estamos trabajando para mejorar la vida
                     cultural en Canarias y apoyar la artesanía majorera.</p>
-                <a href="tel:+1234567890" role="button" class="button call-button">
+                <a href="tel:34675494249" role="button" class="button call-button">
                     <div class="icon phone-icon"></div>
                     <span class="element-to-modify call-us" data-en-text="Call us" data-de-text="Rufen uns an">Llámanos</span>
                 </a>
@@ -396,8 +397,8 @@
                     europeos, actividades en
                     cruceros y hoteles de cinco estrellas de Europa, incluyendo Escandinavia. Ofrecemos un servicio
                     siempre de alta calidad.</p>
-                <a href="path-to-your-pdf-file.pdf" role="button" download="filename.pdf"
-                    class="button download-button">
+                <a href="./media/Catalogue.pdf" role="button" download="Fuerteactua 23-24.pdf"
+                    class="button download-button" target="_blank">
                     <div class="icon catalogue-icon"></div>
                     <span class="element-to-modify download" data-en-text="View catalogue"
                         data-de-text="Katalog ansehen">Ver Catálogo</span>
@@ -413,7 +414,7 @@
         <section class="contact-section">
             <article class="contact-card">
                 <div class="small-icon phone-icon2"></div>
-                <p>+34641888777</p>
+                <p>+34 675 494 249</p>
             </article>
             <article class="contact-card">
                 <div class="small-icon email-icon"></div>
