--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                 <p class="element-to-modify" data-en-text="We also organize concerts and corporate and family events. We are working to improve cultural life in the Canary Islands and support Majorero crafts." data-de-text="Wir organisieren auch Konzerte sowie Firmen- und Familienveranstaltungen. Wir arbeiten daran, das kulturelle Leben auf den Kanarischen Inseln zu verbessern und das Kunsthandwerk der Majoreros zu unterstützen.">También
                     organizamos conciertos y eventos corporativos y familiares. Estamos trabajando para mejorar la vida
                     cultural en Canarias y apoyar la artesanía majorera.</p>
-                <a href="tel:34675494249" role="button" class="button call-button">
+                <a href="tel:+34675494249" role="button" class="button call-button">
                     <div class="icon phone-icon"></div>
                     <span class="element-to-modify call-us" data-en-text="Call us" data-de-text="Rufen uns an">Llámanos</span>
                 </a>
