--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Your website description here">
     <title>Fuerteactua</title>
     <link rel="stylesheet" href="style.css" type="text/css">
-    <script src="script.js" async></script>
+    <script src="script.js" defer></script>
 </head>
 
 <body>
