--- a/index.html
+++ b/index.html
@@ -948,8 +948,8 @@
         </svg>
 
         <nav class="nav-bottom">
-            <p class="element-to-modify" data-en-text="&copy; 2023 Fuerteactua"
-                data-de-text="&copy; 2023 Fuerteactua">&copy; 2023 Fuerteactua</p>
+            <span class="element-to-modify" data-en-text="&copy; 2023 Fuerteactua"
+                data-de-text="&copy; 2023 Fuerteactua">&copy; 2023 Fuerteactua</span>
             <a href="#" class="element-to-modify" data-en-text="by PixKitchen"
                 data-de-text="von PixKitchen">por PixKitchen</a>
         </nav>
