--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                     <span class="element-to-modify download" data-en-text="View catalogue"
                         data-de-text="Katalog ansehen">Ver Catálogo</span>
                 </a>
-                <figure class="img hidden">
+                <figure class="img">
                     <img src="./media/tmp_image.png" alt="">
                 </figure>
 
@@ -414,11 +414,11 @@
         <section class="contact-section">
             <article class="contact-card">
                 <div class="small-icon phone-icon2"></div>
-                <p>+34 675 494 249</p>
+                <span>+34 675 494 249</span>
             </article>
             <article class="contact-card">
                 <div class="small-icon email-icon"></div>
-                <p>fuerteactua@gmail.com</p>
+                <span>fuerteactua@gmail.com</span>
             </article>
         </section>
 
