--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
             </article>
             <article class="contact-card">
                 <div class="small-icon email-icon"></div>
-                <span>fuerteactua@gmail.com</span>
+                <span>info@fuerteactua.es</span>
             </article>
         </section>
 
