--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Experimenta una maestría artística incomparable con Fuerteactua. Descubre artistas renombrados con amplia experiencia desde festivales europeos hasta hoteles de lujo. Sumérgete en un mundo donde la tradición Majorero se encuentra con el entretenimiento moderno.">
     <title>Fuerteactua: Arte y Entretenimiento Premium en Fuerteventura</title>
-    <script type="module" src="https://unpkg.com/@fluentui/web-components"></script>
-    <script src="https://kit.fontawesome.com/9310126803.js" crossorigin="anonymous"></script>
-    <script src="./nav.js" defer></script>
-    <script src="./header.js" defer></script>
-    <script src="./script.js" defer></script>
+
+    <link rel="alternate" hreflang="en" href="http://fuerteactua.es/en/" />
+    <link rel="alternate" hreflang="es" href="http://fuerteactua.es/" />
+    <link rel="alternate" hreflang="de" href="http://fuerteactua.es/de/" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -23,6 +22,12 @@
 
     <link rel="stylesheet" href="https://use.typekit.net/dvq3ajj.css">
 
+    <script type="module" src="https://unpkg.com/@fluentui/web-components"></script>
+    <script src="https://kit.fontawesome.com/9310126803.js" crossorigin="anonymous"></script>
+
+    <script src="./scripts/nav.js" defer></script>
+    <script src="./scripts/header.js" defer></script>
+    <script src="./scripts/script.js" defer></script>
 
 </head>
 <body>
@@ -65,12 +70,12 @@
             <!-- Language Menu -->
             <li class="dropdown" data-dropdown>
                 <button class="link lang-button" aria-controls="language-navigation" aria-expanded="false" data-dropdown-button>
-                    <span class="sr-only">Menú de Idioma</span>
+                    <span class="sr-only">Menú de Idiomas</span>
                 </button>
                 <ul id="language-navigation" class="dropdown-menu lang-menu flex-column content-between">
-                    <li><a href="#">Español</a></li>
-                    <li><a href="#">English</a></li>
-                    <li><a href="#">Deutsch</a></li>
+                    <li><a href="http://fuerteactua.es/">Español</a></li>
+                    <li><a href="http://fuerteactua.es/en/">English</a></li>
+                    <li><a href="http://fuerteactua.es/de/">Deutsch</a></li>
                 </ul>
             </li>
         </ul>
@@ -93,8 +98,8 @@
 
         <!-- Hero Buttons -->
         <div class="hero-buttons flex center-center">
-            <a href="#"><button data-en-text="View Catalog" data-de-text="Katalog Ansehen" class="super-button">Ver Catálogo</button></a>
-            <a href="#"><button data-en-text="Learn More" data-de-text="Mehr Erfahren" class="super-button no-border">Más Información &rarr;</button></a>
+            <a href="#artists"><button data-en-text="View Catalog" data-de-text="Katalog Ansehen" class="super-button">Ver Catálogo</button></a>
+            <a href="#about"><button data-en-text="Learn More" data-de-text="Mehr Erfahren" class="super-button no-border">Más Información &rarr;</button></a>
         </div>
     </header>
 
@@ -122,7 +127,7 @@
                 </div>
 
                 <!-- Download Button -->
-                <a href="#"><button data-en-text="Download Catalog" data-de-text="Katalog Herunterladen" id="download-button" class="super-button button-invert download-button"><i class="fa fa-download little-icon" aria-hidden="true"></i>Descargar Catálogo</button></a>
+                <a href="./media/catalogues/CATALOGUE_FINAL_OCT.pdf" role="button" download="Fuerteactua 23-24.pdf" target="_blank"><button data-en-text="Download Catalog" data-de-text="Katalog Herunterladen" id="download-button" class="super-button button-invert download-button"><i class="fa fa-download little-icon" aria-hidden="true"></i>Descargar Catálogo</button></a>
             </section>
         </section>
 
@@ -136,15 +141,15 @@
                 </div>
                 <div>
                     <h3>Email</h2>
-                    <p>fuerteactua@gmail.com</p>
+                    <p>info@fuerteactua.es</p>
                 </div>
                 <div>
                     <h3>Teléfono</h2>
-                    <p>1234567989</p>
+                    <p>+34 675 494 249</p>
                 </div> 
 
                 <!-- Call Button -->
-                <a href="#"><button data-en-text="Call Now" data-de-text="Jetzt Anrufen" class="super-button button-invert call-button"><i class="fa fa-phone little-icon" aria-hidden="true"></i>Llamar Ahora</button></a>
+                <a href="tel:+34675494249"><button data-en-text="Call Now" data-de-text="Jetzt Anrufen" class="super-button button-invert call-button"><i class="fa fa-phone little-icon" aria-hidden="true"></i>Llamar Ahora</button></a>
             </div>
 
             <!-- Contact Form -->
