--- a/en/index.html
+++ b/en/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Experimenta una maestría artística incomparable con Fuerteactua. Descubre artistas renombrados con amplia experiencia desde festivales europeos hasta hoteles de lujo. Sumérgete en un mundo donde la tradición Majorero se encuentra con el entretenimiento moderno.">
-    <title>Fuerteactua: Arte y Entretenimiento Premium en Fuerteventura</title>
+    <meta name="description" content="Experience unmatched artistry with Fuerteactua. Discover renowned artists with vast experience from European festivals to luxury hotels. Dive into a world where Majorero tradition meets modern entertainment.">
+    <title>Fuerteactua: Premier Art & Entertainment in Fuerteventura</title>
 
     <link rel="alternate" hreflang="en" href="https://fuerteactua.es/en/">
     <link rel="alternate" hreflang="es" href="https://fuerteactua.es/">
     <link rel="alternate" hreflang="de" href="https://fuerteactua.es/de/">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="../styles/styles.css">
 
     <link rel="stylesheet" href="https://use.typekit.net/dvq3ajj.css">
 
@@ -25,9 +25,9 @@
           "@type": "EntertainmentBusiness",
           "name": "Fuerteactua",
           "image": "https://www.fuerteactua.es/media/images/Logo_Header.svg",
-          "description": "Fuerteactua es una destacada empresa de gestión artística y entretenimiento en Fuerteventura, ofreciendo experiencias de arte de alta calidad para residentes y visitantes.",
-          "@id": "https://www.fuerteactua.es",
-          "url": "https://www.fuerteactua.es",
+          "description": "Fuerteactua is a leading artist management and entertainment company in Fuerteventura, providing premium art experiences for residents and visitors.",
+          "@id": "https://www.fuerteactua.es/en",
+          "url": "https://www.fuerteactua.es/en",
           "telephone": "+34675494249",
           "email": "info@fuerteactua.es",
           "address": {
@@ -56,26 +56,25 @@
             "@type": "ContactPoint",
             "telephone": "+34675494249",
             "email": "info@fuerteactua.es",
-            "contactType": "servicio al cliente"
+            "contactType": "customer service"
           }
         }
-    </script>    
+    </script>   
 
     <script src="https://kit.fontawesome.com/9310126803.js" crossorigin="anonymous" defer></script>
 
-    <script src="./scripts/script.js" defer></script>
+    <script src="../scripts/script.js" defer></script>
 
 </head>
 <body>
     <!-- Skip to Content SR-Only -->
-    <a class="sr-only" href="#main">Saltar al contenido principal</a>
-
+    <a class="sr-only" href="#main">Skip to main content</a>
     <!-- Sticky Nav -->
     <nav class="flex between-center">
         <!-- Logo -->
-        <h1 class="sr-only">Fuerteactua: Entretenimiento Premium en Canarias</h1>
+        <h1 class="sr-only">Fuerteactua: Canary Islands' Premier Entertainment</h1>
         <div class="logo-div flex center-center" data-expanded="false">
-            <a class="flex center-center" href="https://fuerteactua.es/">
+            <a class="flex center-center" href="https://fuerteactua.es/en/">
                 <svg class="desktop-logo" viewBox="0 0 426 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g>
                     <path d="M1.67048 30V8.78199H15.8842V13.8813H7.70765V16.9878H14.5947V21.7941H7.70765V30H1.67048Z" fill="#F2F2F2"/>
@@ -103,14 +102,14 @@
 
         <!-- Nav-List Menu -->
         <ul id="primary-navigation" class="nav-list flex between-center" data-visible="false">
-            <li><a class="target-link" href="#about">Acerca de</a></li>
-            <li><a class="target-link" href="#artists">Espectáculos</a></li>
-            <li><a class="target-link" href="#contact">Contacto</a></li>
+            <li><a class="target-link" href="#about">About</a></li>
+            <li><a class="target-link" href="#artists">Shows</a></li>
+            <li><a class="target-link" href="#contact">Contact</a></li>
 
             <!-- Language Menu -->
             <li class="dropdown" data-dropdown>
                 <button class="link lang-button" aria-controls="language-navigation" aria-expanded="false" data-dropdown-button>
-                    <span class="sr-only">Menú de Idiomas</span>
+                    <span class="sr-only">Language Menu</span>
                 </button>
                 <ul id="language-navigation" class="dropdown-menu lang-menu flex-column content-between">
                     <li><a href="https://fuerteactua.es/">Español</a></li>
@@ -124,22 +123,22 @@
     <!-- Hero Section -->
     <header id="hero" class="flex-column between-center">
         <!-- Image Overlay -->
-        <img class="overlay" src="./media/images/VIDEO_OVERLAY.png" alt="Superposición de vídeo">
+        <img class="overlay" src="../media/images/VIDEO_OVERLAY.png" alt="Video overlay">
 
         <!-- Video -->
-        <video class="hero-video" src="./media/videos/video_01.mp4" autoplay muted loop></video>
+        <video class="hero-video" src="../media/videos/video_01.mp4" autoplay muted loop></video>
 
         <!-- Hero Heading -->
         <article class="hero-heading">
-            <h2>Fuerteactua: Arte y Entretenimiento en Fuerteventura.</h2>
-            <p>Uniendo la tradición majorera con las artes modernas.</p>
+            <h2>Fuerteactua: Fuerteventura's Art & Entertainment.</h2>
+            <p>Bridging Majorero tradition with modern arts.</p>
         </article>
 
 
         <!-- Hero Buttons -->
         <div class="hero-buttons flex center-center">
-            <a href="#artists" role="button" class="super-button">Ver Catálogo</a>
-            <a href="#about" role="button" class="super-button no-border">Más Información &rarr;</a>
+            <a href="#artists" role="button" class="super-button">View Catalog</a>
+            <a href="#about" role="button" class="super-button no-border">Learn More &rarr;</a>
         </div>
     </header>
 
@@ -148,8 +147,8 @@
         <!-- About Section -->
         <div id="about" class="about-section flex-column items-center">
             <article class="introduction flex-column items-center">
-                <h2>Conectamos a Fuerteventura con lo mejor del arte y entretenimiento.</h2>
-                <p class="intro-p">Somos el puente entre la tradición majorera y la modernidad de las artes escénicas y visuales. Organizamos <b>conciertos, eventos corporativos y familiares</b>, y ofrecemos <b>producción de música y video</b> de primera calidad. Nuestra misión es enriquecer la vida cultural de las Islas Canarias, destacando y apoyando las artesanías Majoreras.</p>
+                <h2>We connect Fuerteventura with the best of art and entertainment.</h2>
+                <p class="intro-p">We are the bridge between the Majorero tradition and the modernity of the performing and visual arts. We organize <b>concerts, corporate and family events</b>, and offer top-quality <b>music and video production</b>. Our mission is to enrich the cultural life of the Canary Islands, highlighting and supporting Majorero crafts.</p>
             </article>
 
             <!-- Artists Sub-Section -->
@@ -162,19 +161,19 @@
                               class="accordion-trigger"
                               aria-controls="sect1"
                               id="accordion1id">
-                        <span class="accordion-title">Conoce a Nuestros Artistas Destacados</span><i class="fa fa-angle-down accordion-icon" aria-hidden="true"></i>
+                        <span class="accordion-title">Meet Our Renowned Artists</span><i class="fa fa-angle-down accordion-icon" aria-hidden="true"></i>
                       </button>
                     </h3>
                     <div id="sect1"
                          role="region"
                          aria-labelledby="accordion1id"
                          class="accordion-panel" hidden>
-                        <p>Nuestros artistas son <b>más que profesionales</b>; son maestros en su oficio.</p>
-                        <p>Con una amplia experiencia en <b>festivales europeos, cruceros y hoteles de cinco estrellas</b> en toda Europa, incluida Escandinavia, personifican la excelencia. Con nosotros, siempre puedes esperar un <b>servicio de primer nivel</b>.</p>
+                        <p>Our artists are <b>more than just professionals</b>; they're masters in their craft.</p>
+                        <p>With vast experience spanning <b>European festivals, cruise ships, and five-star hotels</b> across Europe—including Scandinavia—they epitomize excellence. Expect nothing less than <b>top-tier service</b> with us.</p>
                     </div>
                 </article>
                 <!-- Download Button -->
-                <a role="button" href="./media/catalogues/CATALOGUE_FINAL_OCT.pdf" download="Fuerteactua 23-24.pdf" target="_blank" id="download-button" class="super-button button-invert download-button"><i class="fa fa-download little-icon" aria-hidden="true"></i>Descargar Catálogo</a>
+                <a href="../media/catalogues/CATALOGUE_FINAL_OCT.pdf" download="Fuerteactua 23-24.pdf" target="_blank" role="button" id="download-button" class="super-button button-invert download-button"><i class="fa fa-download little-icon" aria-hidden="true"></i>Download Catalog</a>
             </div>
         </div>
 
@@ -183,39 +182,39 @@
             <!-- Contact Info -->
             <article class="contact-info flex-column content-between">
                 <div>
-                    <h2>Contacto</h2>
-                    <p>Ya sea que tengas preguntas, comentarios o quieras saber más, estamos aquí para ayudarte. Valoramos la <b>comunicación abierta</b> y buscamos brindar una <b>experiencia fluida</b> a nuestros visitantes. Contáctanos a través de los métodos proporcionados y responderemos rápidamente.</p>
+                    <h2>Contact</h2>
+                    <p>Whether you have questions, feedback, or want to learn more, we're here to help. We value <b>open communication</b> and strive for a <b>seamless experience</b> for our visitors. Reach out to us through the provided contact methods, and we'll respond promptly.</p>
                 </div>
                 <div>
                     <h3>Email</h3>
                     <p>info@fuerteactua.es</p>
                 </div>
                 <div>
-                    <h3>Teléfono</h3>
+                    <h3>Phone</h3>
                     <p>+34 675 494 249</p>
                 </div> 
 
                 <!-- Call Button -->
-                <a href="tel:+34675494249" role="button" class="super-button button-invert call-button"><i class="fa fa-phone little-icon" aria-hidden="true"></i>Llamar Ahora</a>
+                <a href="tel:+34675494249" role="button" class="super-button button-invert call-button"><i class="fa fa-phone little-icon" aria-hidden="true"></i>Call Now</a>
             </article>
 
             <!-- Contact Form -->
             <form class="contact-form flex-column content-between" action="https://formspree.io/f/mvojlyvy" method="POST">
                 <div>
-                    <label for="name">Nombre</label>
-                    <input class="input-field" id="name" type="text" name="name" placeholder="Ingrese su nombre" required aria-required="true">
+                    <label for="name">Name</label>
+                    <input class="input-field" id="name" type="text" name="name" placeholder="Enter your name" required aria-required="true">
                 </div>
                 <div>
                     <label for="email">Email</label>
-                    <input class="input-field" id="email" type="email" name="email" placeholder="Ingrese su correo electrónico" required aria-required="true">
+                    <input class="input-field" id="email" type="email" name="email" placeholder="Enter your email" required aria-required="true">
                 </div>
                 <div>                   
-                    <label for="message">Mensaje</label>
-                    <textarea id="message" name="message" rows="7" cols="33" placeholder="Escriba su mensaje aquí..." required aria-required="true"></textarea>
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message" rows="7" cols="33" placeholder="Type your message here..." required aria-required="true"></textarea>
                 </div>
 
                 <!-- Submit Button -->
-                <div><button type="submit" class="super-button submit-button button-black"><i class="fa fa-envelope-o little-icon" aria-hidden="true"></i>Enviar Correo</button></div>
+                <div><button type="submit" class="super-button submit-button button-black"><i class="fa fa-envelope-o little-icon" aria-hidden="true"></i>Send Email</button></div>
             </form>
         </div>
     </main>
@@ -225,7 +224,7 @@
         <div class="footer-logo flex between-center">
             <!-- Footer Logo -->
             <div class="logo-div flex center-center footer-logo-svg">
-                <a class="flex center-center" href="https://fuerteactua.es/">
+                <a class="flex center-center" href="https://fuerteactua.es/en/">
                     <svg viewBox="0 0 426 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g>
                         <path d="M1.67048 30V8.78199H15.8842V13.8813H7.70765V16.9878H14.5947V21.7941H7.70765V30H1.67048Z" fill="#F2F2F2"/>
@@ -246,12 +245,12 @@
             </div>
 
             <!-- Soundwave Image -->
-            <img src="./media/images/Soundwave.png" alt="Onda de sonido">
+            <img src="../media/images/Soundwave.png" alt="Soundwave">
         </div>
 
         <!-- Footer Info -->
         <div class="footer-info flex items-center">
-            <span>&copy; Fuerteactua 2023|2024. Desarrollado por <a href="https://pixkitchen.com/" target="_blank"><b>PixKitchen</b></a>.</span>
+            <span>&copy; Fuerteactua 2023|2024. Powered by <a href="https://pixkitchen.com/" target="_blank"><b>PixKitchen</b></a>.</span>
         </div>
     </footer>
 </body>
